--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Live Code v1
             <i class="bi bi-code-slash"></i>
           </a>
-          <a class="bi bi-github" href="https://github.com/" > Repositorio</a>
+            <a class="bi bi-github" href="https://github.com/blenddzy/code-live" > Repositorio</a>
         </div>
       </nav>
     
